--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               В процессе
             </h3>
             <div class="taskboard__list taskboard__list--sorted">
-              <div class="taskboard__item task task--empty">
+              <div class="taskboard__item task--empty">
                 <p>Перетащите карточку</p>
               </div>
               <div class="taskboard__item task task--processing">
@@ -104,7 +104,7 @@
           <article class="taskboard__group taskboard__group--done">
             <h3 class="taskboard__group-heading taskboard__group-heading--done">Готово</h3>
             <div class="taskboard__list taskboard__list--sorted">
-              <div class="taskboard__item task task--empty">
+              <div class="taskboard__item task--empty">
                 <p>Перетащите карточку</p>
               </div>
               <div class="taskboard__item task task--done">
@@ -140,9 +140,9 @@
                 </div>
                 <button class="task__edit" type="button" aria-label="Изменить"></button>
               </div>
-              <div class="task--empty task task--empty-trash">
-                <p>Корзина пуста</p>
-              </div>
+            </div>
+            <div class="task--empty task--empty-trash">
+              <p>Корзина пуста</p>
             </div>
             <button class="taskboard__button button button--clear" type="button">
               <svg
