--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <article class="taskboard__group taskboard__group--backlog">
             <h3 class="taskboard__group-heading taskboard__group-heading--backlog">Бэклог</h3>
             <div class="taskboard__list">
+              <div class="taskboard__item task--empty">
+                <p>Перетащите карточку или добавьте новую задачу</p>
+              </div>
               <div class="taskboard__item task">
                 <div class="task__body">
                   <p class="task__view">Выучить JS</p>
